--- a/workshops/freetier/manifest.json
+++ b/workshops/freetier/manifest.json
@@ -20,7 +20,7 @@
         },
 
         {
-          "title": "Lab 2: Create a Compute instance",
+          "title": "Lab 2: Create a Compute instance ",
           "filename": "../../create-compute/create-compute.md"
         },
 
@@ -28,7 +28,6 @@
           "title": "Lab 3: Connect to the HeatWave Instance from Visual Studio Code",
           "filename": "../../connect-dbs-vscode/connect-dbs-vscode.md"
         },
-       
 
         {
           "title": "Lab 4: Use HeatWave In-database LLM to Generate and Summarize Content",
@@ -41,10 +40,10 @@
         },
 
         {
-          "title": "Lab 6: Build A RAG-powered AI chat app ",
+          "title": "Lab 6: Build LAMP RAG-powered AI Chat App",
           "filename": "../../develop-app/develop-app.md"
         },
-
+        
         {
           "title": "Stop Services",
           "filename": "../../stop-services/stop-services.md"
